--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,13 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_background">#BDC0D1</color>
+    <color name="dark_background">#EFF0F5</color>
+    <color name="blue">#308FF9</color>
+    <color name="pale_pink">#F0F0F0</color>
+    <color name="searchbarColor">#B5CDCBCB</color>
+    <color name="imageblankcolor">#0C00130F</color>
+    <color name="text">#B9B4C7</color>
+    <color name="colorSubtitle">#757575</color>
+
 </resources>
