--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,136 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_favorite_24"
+        android:layout_margin="16dp"
+        android:layout_alignParentBottom="true"
+        android:contentDescription="@string/favorite_button"
+        android:layout_alignParentEnd="true"/>
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:layout_anchorGravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="visible" />
-
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/ivProfileDetail"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_gravity="center"
-            android:layout_margin="16dp"
-            android:contentDescription="@string/imageprofile"
-            android:src="@color/imageblankcolor"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:riv_oval="true"
-            tools:ignore="ImageContrastCheck" />
-
-        <TextView
-            android:id="@+id/tvName"
-            style="@style/TextContent.title"
-            android:layout_gravity="center"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:text="@string/name"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/ivProfileDetail"
-            app:layout_constraintTop_toTopOf="@+id/ivProfileDetail" />
-
-
-        <TextView
-            android:id="@+id/tvUsernameDetail"
-            style="@style/TextContent.HeadlineSmall"
-            android:layout_gravity="center"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="12dp"
-            android:text="@string/username"
-            app:layout_constraintBottom_toBottomOf="@+id/ivProfileDetail"
-            app:layout_constraintStart_toEndOf="@+id/ivProfileDetail" />
-
-        <TextView
-            android:id="@+id/tvBio"
-            style="@style/TextContent.Info"
-            android:layout_gravity="center"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="1dp"
-            android:maxLines="1"
-            android:text="@string/bio"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ivProfileDetail" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toTopOf="@+id/tabs"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvBio">
+            android:layout_height="wrap_content">
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginEnd="8dp"
-                android:contentDescription="@string/iconprofile"
-                android:src="@drawable/users" />
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:layout_anchorGravity="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible" />
+
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/ivProfileDetail"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:contentDescription="@string/imageprofile"
+                android:src="@color/imageblankcolor"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:riv_oval="true"
+                tools:ignore="ImageContrastCheck" />
 
             <TextView
-                android:id="@+id/tvFollowerDetail"
-                style="@style/TextContent.Info"
-                android:textColor="@color/colorSubtitle"
-                tools:text="@string/_500_follower" />
-
-            <TextView
-                style="@style/TextContent"
+                android:id="@+id/tvName"
+                style="@style/TextContent.title"
+                android:layout_gravity="center"
                 android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:text="@string/dot" />
+                android:layout_marginTop="12dp"
+                android:text="@string/name"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@+id/ivProfileDetail"
+                app:layout_constraintTop_toTopOf="@+id/ivProfileDetail" />
 
             <TextView
-                android:id="@+id/tvFollowingDetail"
+                android:id="@+id/tvUsernameDetail"
+                style="@style/TextContent.HeadlineSmall"
+                android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="12dp"
+                android:text="@string/username"
+                app:layout_constraintBottom_toBottomOf="@+id/ivProfileDetail"
+                app:layout_constraintStart_toEndOf="@+id/ivProfileDetail" />
+
+            <TextView
+                android:id="@+id/tvBio"
                 style="@style/TextContent.Info"
-                android:textColor="@color/colorSubtitle"
-                tools:text="@string/_500_following" />
+                android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="1dp"
+                android:maxLines="1"
+                android:text="@string/bio"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ivProfileDetail" />
 
-        </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toTopOf="@+id/tabs"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvBio">
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/tabLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            app:tabIndicatorColor="@color/blue"
-            app:tabSelectedTextColor="@color/blue"
-            app:tabTextColor="#A39999" />
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginEnd="8dp"
+                    android:contentDescription="@string/iconprofile"
+                    android:src="@drawable/users" />
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:contentDescription="@string/tabLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tabs" />
+                <TextView
+                    android:id="@+id/tvFollowerDetail"
+                    style="@style/TextContent.Info"
+                    android:textColor="@color/colorSubtitle"
+                    tools:text="@string/_500_follower" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+                <TextView
+                    style="@style/TextContent"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:text="@string/dot" />
+
+                <TextView
+                    android:id="@+id/tvFollowingDetail"
+                    style="@style/TextContent.Info"
+                    android:textColor="@color/colorSubtitle"
+                    tools:text="@string/_500_following" />
+
+            </LinearLayout>
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/tabLayout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:tabGravity="fill"
+                app:tabIndicatorAnimationMode="elastic"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+                app:tabIndicatorColor="@color/blue"
+                app:tabSelectedTextColor="@color/blue"
+                app:tabTextColor="@color/colorTextTab" />
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/tabLayout"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tabs" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
+
+</RelativeLayout>
 
