--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -10,11 +10,11 @@
         android:id="@+id/fab_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/baseline_favorite_24"
-        android:layout_margin="16dp"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
         android:contentDescription="@string/favorite_button"
-        android:layout_alignParentEnd="true"/>
+        android:src="@drawable/baseline_favorite_border_24" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -77,7 +77,7 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="1dp"
+                android:layout_marginEnd="8dp"
                 android:maxLines="1"
                 android:text="@string/bio"
                 app:layout_constraintStart_toStartOf="parent"
@@ -130,9 +130,9 @@
                 android:contentDescription="@string/tabLayout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                 app:tabGravity="fill"
                 app:tabIndicatorAnimationMode="elastic"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                 app:tabIndicatorColor="@color/blue"
                 app:tabSelectedTextColor="@color/blue"
                 app:tabTextColor="@color/colorTextTab" />
@@ -140,9 +140,10 @@
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/view_pager"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:contentDescription="@string/tabLayout"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tabs" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
