--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="text">#B9B4C7</color>
     <color name="colorSubtitle">#757575</color>
     <color name="colorTextTab">#A39999</color>
-
+    <color name="placeholder">#6FB6B6B6</color>
 </resources>
