--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -7,4 +7,22 @@
         <item name="colorPrimaryVariant">@color/dark_background</item>
         <!--<item name="colorPrimaryContainer">@color/pale_pink</item>-->
     </style>
+
+    <style name="TextContent">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="fontFamily">@font/inter</item>
+    </style>
+
+    <style name="TextContent.title">
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="TextContent.HeadlineSmall">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextContent.Info">
+        <item name="android:textSize">14sp</item>
+    </style>
 </resources>
