final submission fundamental 95 percent

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,7 +5,9 @@
         <item name="colorPrimary">@color/dark_background</item>
         <item name="colorOnPrimary">@color/blue</item>
         <item name="colorPrimaryVariant">@color/dark_background</item>
-        <!--<item name="colorPrimaryContainer">@color/pale_pink</item>-->
+        <item name="android:statusBarColor">
+            @android:color/transparent
+        </item>
     </style>
 
     <style name="TextContent">
