--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="light_background">#BDC0D1</color>
     <color name="dark_background">#EFF0F5</color>
     <color name="blue">#308FF9</color>
+    <color name="blues">#A6B1E1</color>
     <color name="pale_pink">#F0F0F0</color>
     <color name="searchbarColor">#B5CDCBCB</color>
     <color name="imageblankcolor">#0C00130F</color>
