--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -18,7 +18,7 @@
         android:layout_marginBottom="16dp"
         android:contentDescription="@string/favorite_button"
         android:src="@drawable/baseline_favorite_border_24"
-        tools:ignore="RedundantDescriptionCheck" />
+        tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -142,7 +142,6 @@
                 android:id="@+id/view_pager"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:contentDescription="@string/tabLayout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tabs" />
