--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,14 @@
-<resources >
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.GithubUser_" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/blue</item>
         <item name="colorOnPrimary">@color/light_background</item>
-        <item name="colorPrimaryVariant">@color/light_background</item>
-        <item name="colorPrimaryContainer">@color/pale_pink</item>
+        <item name="colorPrimaryVariant">@color/pale_pink</item>
+        <item name="colorPrimaryContainer">@color/blues</item>
+        <item name="android:statusBarColor">
+            @android:color/transparent
+        </item>
     </style>
 
     <style name="Theme.GithubUser_" parent="Base.Theme.GithubUser_" />
