--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,7 @@
         <item name="android:statusBarColor">
             @android:color/transparent
         </item>
+        <item name="fontFamily">@font/inter</item>
     </style>
 
     <style name="Theme.GithubUser_" parent="Base.Theme.GithubUser_" />
