--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.example.githubuser_.ui.FirstFragment"
+        android:name="com.example.githubuser_.ui.FollowFragment"
         android:label="@string/string_first_fragment"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/fragment_follow">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
@@ -17,9 +17,9 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.example.githubuser_.ui.SecondFragment"
+        android:name="com.example.githubuser_.ui.FollowFragment"
         android:label="@string/string_second_fragment"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/fragment_follow">
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
