--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
   <style name="Theme.GithubUser_" parent="Base.Theme.GithubUser_">
     <!-- Transparent system bars for edge-to-edge. -->
     <item name="android:navigationBarColor">@android:color/transparent</item>
